--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "react-complete-guide",
   "version": "0.1.0",
   "private": true,
+  "browserslist": ">1%,last 2 versions",
   "dependencies": {
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^5.1.2",
-    "react-scripts": "1.0.13",
+    "react-scripts": "^3.4.0",
     "redux": "^3.7.2",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
